tests/netconvert/import/XML/errors/broken_edge/edge#shape__false1d/errors.netconvert
Error: Attribute 'shape' in definition of a edge is not a valid list of positions.
Quitting (on error).
